# MicroLua

./: .gitignore  .gitmodules  .hgignore  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md  mlua_import.cmake  mlua_init.cmake  rules.cmake
core/: CMakeLists.txt  core.cmake  file.c  file_data.c.in  lib.c  lib_register.c.in  lib_register.in.c  luaconf.in.h  main.c  module.c  module_config.in.c  module_core.in.c  module_header.in.c  module_lua.in.c  module_register.in.c  test_main.c  tool_main.in.c  util.c
core/include/mlua/: file.h  lib.h  main.h  module.h  util.h
core/include_tool/mlua/: module.h
docs/: common.md  core.md  hardware.md  lwip.md  mlua.md  pico.md
examples/: CMakeLists.txt
examples/adc/: CMakeLists.txt  onboard_temperature_irq_main.lua  onboard_temperature_main.lua
examples/blink/: CMakeLists.txt  main.lua
examples/demo/: CMakeLists.txt  main.lua  main1.lua
lib/: 00_setup.test.lua  CMakeLists.txt  class.lua  eio.lua  hardware.adc.c  hardware.adc.test.lua  hardware.base.c  hardware.base.test.lua  hardware.clocks.c  hardware.clocks.test.lua  hardware.flash.c  hardware.flash.test.lua  hardware.gpio.c  hardware.gpio.test.lua  hardware.i2c.c  hardware.i2c.test.lua  hardware.irq.c  hardware.irq.test.lua  hardware.pll.c  hardware.pll.test.lua  hardware.pwm.c  hardware.pwm.test.lua  hardware.regs.test.lua  hardware.resets.c  hardware.resets.test.lua  hardware.rtc.c  hardware.rtc.test.lua  hardware.spi.c  hardware.spi.test.lua  hardware.sync.c  hardware.sync.test.lua  hardware.timer.c  hardware.timer.test.lua  hardware.uart.c  hardware.uart.test.lua  hardware.vreg.c  hardware.vreg.test.lua  hardware.watchdog.c  hardware.watchdog.test.lua  hardware.xosc.c  (+72 more)
lib/common/: CMakeLists.txt  event.c  mlua.array.c  mlua.array.test.lua  mlua.bits.c  mlua.bits.test.lua  mlua.block.c  mlua.block.mem.c  mlua.cli.lua  mlua.config.test.lua  mlua.errors.c  mlua.errors.test.lua  mlua.event.c  mlua.fs.c  mlua.fs.lfs.c  mlua.fs.lfs.test.lua  mlua.fs.test.lua  mlua.int64.c  mlua.int64.test.lua  mlua.io.lua  mlua.io.test.lua  mlua.list.c  mlua.list.test.lua  mlua.mem.c  mlua.mem.test.lua  mlua.oo.lua  mlua.oo.test.lua  mlua.platform.c  mlua.platform.test.lua  mlua.repr.lua  mlua.repr.test.lua  mlua.shell.lua  mlua.stdio.c  mlua.test.lua  mlua.testing.lua  mlua.testing.test.lua  mlua.thread.c  mlua.thread.c.c  mlua.thread.group.lua  mlua.thread.lua  (+6 more)
lib/common/include_mlua.array/mlua/: array.h
lib/common/include_mlua.block/mlua/: block.h
lib/common/include_mlua.errors/mlua/: errors.h
lib/common/include_mlua.event/mlua/: event_common.h
lib/common/include_mlua.fs.lfs/mlua/: fs.lfs.h
lib/common/include_mlua.fs/mlua/: fs.h
lib/common/include_mlua.int64/mlua/: int64.h
lib/common/include_mlua.mem/mlua/: mem.h
lib/common/include_mlua.thread/mlua/: event_common.h  thread.h
lib/common/include_platform/mlua/: platform.h  platform_common.h
lib/host/: CMakeLists.txt  event.c  mlua.event.c  platform.c  platform.cmake
lib/host/include_luaconf/mlua/: platform_luaconf.h
lib/host/include_mlua.event/mlua/: event.h
lib/host/include_mlua.thread/mlua/: event.h
lib/host/include_platform/mlua/: platform.h  platform_defs.h
lib/include_hardware.gpio/mlua/: hardware.gpio.h
lib/include_hardware.i2c/mlua/: hardware.i2c.h
lib/include_hardware.irq/mlua/: hardware.irq.h
lib/include_hardware.uart/mlua/: hardware.uart.h
lib/include_int64/mlua/: int64.h
lib/include_mlua.block.flash/mlua/: block.flash.h
lib/include_mlua.block/mlua/: block.h
lib/include_mlua.errors/mlua/: errors.h
lib/include_mlua.event/mlua/: event.h
lib/include_mlua.fs.lfs/mlua/: fs.lfs.h
lib/include_mlua.int64/mlua/: int64.h
lib/include_pico.stdio/mlua/: pico.stdio.h
lib/include_signal/mlua/: signal.h
lib/pico/: 00_setup.test.lua  10_setup.test.lua  CMakeLists.txt  event.c  hardware.adc.c  hardware.adc.test.lua  hardware.base.c  hardware.base.test.lua  hardware.clocks.c  hardware.clocks.test.lua  hardware.dma.c  hardware.dma.test.lua  hardware.flash.test.lua  hardware.gpio.c  hardware.gpio.test.lua  hardware.i2c.c  hardware.i2c.test.lua  hardware.irq.c  hardware.irq.test.lua  hardware.pio.asm.lua  hardware.pio.asm.test.lua  hardware.pio.c  hardware.pio.test.lua  hardware.pll.c  hardware.pll.test.lua  hardware.pwm.c  hardware.pwm.test.lua  hardware.regs.test.lua  hardware.resets.c  hardware.resets.test.lua  hardware.rtc.c  hardware.rtc.test.lua  hardware.spi.c  hardware.spi.test.lua  hardware.sync.c  hardware.sync.test.lua  hardware.timer.c  hardware.timer.test.lua  hardware.uart.c  hardware.uart.test.lua  (+85 more)
lib/pico/include_hardware.gpio/mlua/: hardware.gpio.h
lib/pico/include_hardware.i2c/mlua/: hardware.i2c.h
lib/pico/include_hardware.uart/mlua/: hardware.uart.h
lib/pico/include_luaconf/mlua/: platform_luaconf.h
lib/pico/include_lwip/: lwipopts.h
lib/pico/include_lwip/mlua/: lwip.h
lib/pico/include_mlua.block.flash/mlua/: block.flash.h
lib/pico/include_mlua.event/mlua/: event.h  event_platform.h
lib/pico/include_mlua.thread/mlua/: event.h
lib/pico/include_pico.cyw43/mlua/: cyw43.h  cyw43_configport.h
lib/pico/include_pico.lwip/: lwipopts.h
lib/pico/include_pico.lwip/mlua/: lwip.h
lib/pico/include_pico.stdio/mlua/: pico.stdio.h
lib/pico/include_platform/mlua/: platform.h  platform_defs.h
tools/: CMakeLists.txt  FindLua.cmake  debug  embed_config.lua  embed_header.lua  embed_lua.lua  flash  gen.lua  microfs.lfs.c  microfs.lua  microlua.lua  ocd  picocom  run  run-tests  term  test-server.py  tests_main.lua
tools/lua/: CMakeLists.txt
tools/microfs/: CMakeLists.txt  lfs.c  microfs.lua
tools/mlua/: CMakeLists.txt  mlua_cli.lua
